@@ -16,6 +16,8 @@ PHP                                                                        NEWS
   (Pierre)
 
 - Fixed bug #50023 (pdo_mysql doesn't use PHP_MYSQL_UNIX_SOCK_ADDR). (Ilia)
+- Fixed bug #49908 (throwing exception in __autoload crashes when interface
+  is not defined). (Felipe)
 - Fixed bug #49719 (ReflectionClass::hasProperty returns true for a private 
   property in base class). (Felipe)
 - Fixed bug #49142 (crash when exception thrown from __tostring()).
